Source/WTF/wtf/cf/TypeCastsCF.h
@@ -36,33 +36,6 @@ namespace WTF {
 
 template <typename> struct CFTypeTrait;
 
-#define WTF_DECLARE_CF_TYPE_TRAIT(ClassName) \
-template <> \
-struct WTF::CFTypeTrait<ClassName##Ref> { \
-    static inline CFTypeID typeID(void) { return ClassName##GetTypeID(); } \
-};
-
-WTF_DECLARE_CF_TYPE_TRAIT(CFArray);
-WTF_DECLARE_CF_TYPE_TRAIT(CFBoolean);
-WTF_DECLARE_CF_TYPE_TRAIT(CFData);
-WTF_DECLARE_CF_TYPE_TRAIT(CFDictionary);
-WTF_DECLARE_CF_TYPE_TRAIT(CFNumber);
-WTF_DECLARE_CF_TYPE_TRAIT(CFString);
-WTF_DECLARE_CF_TYPE_TRAIT(CFURL);
-
-#define WTF_DECLARE_CF_MUTABLE_TYPE_TRAIT(ClassName, MutableClassName) \
-template <> \
-struct WTF::CFTypeTrait<MutableClassName##Ref> { \
-    static inline CFTypeID typeID(void) { return ClassName##GetTypeID(); } \
-};
-
-WTF_DECLARE_CF_MUTABLE_TYPE_TRAIT(CFArray, CFMutableArray);
-WTF_DECLARE_CF_MUTABLE_TYPE_TRAIT(CFData, CFMutableData);
-WTF_DECLARE_CF_MUTABLE_TYPE_TRAIT(CFDictionary, CFMutableDictionary);
-WTF_DECLARE_CF_MUTABLE_TYPE_TRAIT(CFString, CFMutableString);
-
-#undef WTF_DECLARE_CF_MUTABLE_TYPE_TRAIT
-
 // Use dynamic_cf_cast<> instead of checked_cf_cast<> when actively checking CF types,
 // similar to dynamic_cast<> in C++. Be sure to include a nullptr check.
 
@@ -101,6 +74,33 @@ template<typename T> T checked_cf_cast(CFTypeRef object)
 }
 
 } // namespace WTF
+
+#define WTF_DECLARE_CF_TYPE_TRAIT(ClassName) \
+template <> \
+struct WTF::CFTypeTrait<ClassName##Ref> { \
+    static inline CFTypeID typeID(void) { return ClassName##GetTypeID(); } \
+};
+
+WTF_DECLARE_CF_TYPE_TRAIT(CFArray);
+WTF_DECLARE_CF_TYPE_TRAIT(CFBoolean);
+WTF_DECLARE_CF_TYPE_TRAIT(CFData);
+WTF_DECLARE_CF_TYPE_TRAIT(CFDictionary);
+WTF_DECLARE_CF_TYPE_TRAIT(CFNumber);
+WTF_DECLARE_CF_TYPE_TRAIT(CFString);
+WTF_DECLARE_CF_TYPE_TRAIT(CFURL);
+
+#define WTF_DECLARE_CF_MUTABLE_TYPE_TRAIT(ClassName, MutableClassName) \
+template <> \
+struct WTF::CFTypeTrait<MutableClassName##Ref> { \
+    static inline CFTypeID typeID(void) { return ClassName##GetTypeID(); } \
+};
+
+WTF_DECLARE_CF_MUTABLE_TYPE_TRAIT(CFArray, CFMutableArray);
+WTF_DECLARE_CF_MUTABLE_TYPE_TRAIT(CFData, CFMutableData);
+WTF_DECLARE_CF_MUTABLE_TYPE_TRAIT(CFDictionary, CFMutableDictionary);
+WTF_DECLARE_CF_MUTABLE_TYPE_TRAIT(CFString, CFMutableString);
+
+#undef WTF_DECLARE_CF_MUTABLE_TYPE_TRAIT
 
 using WTF::checked_cf_cast;
 using WTF::dynamic_cf_cast;
